showcase gap fixed

--- a/public/frontEnd/css/style.css
+++ b/public/frontEnd/css/style.css
@@ -687,7 +687,7 @@ a {
 .showcase-2 {
     max-width: 376px;
     width: 100%;
-    height: 500px;
+    max-height: 500px;
 }
 .showcase-3 {
     max-width: 782px;
@@ -697,7 +697,7 @@ a {
 .showcase-4 {
     max-width: 500px;
     width: 100%;
-    height: 620px;
+    max-height: 620px;
 }
 .showcase-5 {
     max-width: 500px;
